# crypto-trader

./: .dockerignore  .gitignore  .venv  AGENTS.md  CLAUDE.md  Dockerfile  README.md  SESSION_HANDOFF.md  docker-compose.yml  pyproject.toml  ralph-loop.state.json  requirements.txt  sitecustomize.py
.codex/: instructions.md
.omc/: prd.json  progress.txt  project-memory.json
.streamlit/: config.toml
artifacts/: backtest-30d-2026-03-24.md  backtest-research-report.md  backtest-results-90d.json  oos_window_registry.json  optimization-results-5strat.json  portfolio-optimization.json  portfolio-optimization.md  portfolio-weights.toml  strategy-report.md
backtest_results/: backtest-all-90d.json  strategy-comparison-90d.md  strategy-comparison-report.md  strategy-sweep-90d-interrupted.json  strategy-sweep-90d-interrupted.md
config/: daemon.toml  etf_admission.toml  example.toml  live-sol-momentum.toml  live.toml  optimized.toml  validated.toml
dashboard/: app.py  auth.py  data.py  styles.py
data/: funding_rate_BTCUSDT.json  funding_rate_ETHUSDT.json  funding_rate_SOLUSDT.json
docs/: RALPH_PROTOCOL.md  architecture-critique-2026-04-04.md  backtest-grid-90d.md  backtest-grid-results.md  backtest-results-90d.md  backtest_history.md  daemon-monitoring-report-20260329.md  daemon-status-20260327.md  daily-report-20260325.md  fire_roadmap.md  gate-progress.md  go-live-readiness-20260329.md  live-performance-report-20260327.md  micro-live-gate-checklist-20260327.md  momentum-pullback-strategy-20260327.md  monitoring-report-20260327.md  operations.md  performance-report.md  (+17 more)
(+573 files in other folders)
